--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,20 +12,32 @@
         android:theme="@style/Theme.Hafiz_LMS"
         tools:targetApi="31">
         <activity
+            android:name=".Delete"
+            android:exported="false" />
+        <activity
+            android:name=".update"
+            android:exported="false" />
+        <activity
+            android:name=".Edit_Details"
+            android:exported="false" />
+        <activity
+            android:name=".Details_Page"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+        <activity
             android:name=".SplashScreen"
-            android:exported="true" >
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
             android:exported="false" />
-
     </application>
 
 </manifest>
